# ohtu_kandi_viitteet

./: .coveragerc  .gitignore  .pylintrc  .pylintrc2  .template_env  LICENSE.txt  README.md  Retro.md  fly.toml  init.py  init_database.py  log.html  output.xml  pyproject.toml  report.html  run.py  run_robot_tests.sh  tasks.py
.github/workflows/: main.yml
dokumentaatio/: dokumentti.md
src/: .bashrc  AppLibrary.py  app.py  citationArticle.py  citationBook.py  citationInproceedings.py  database.py  db.py  dummy.py  extensions.py  index.py  main.py  routes.py  run.py  save_citate_to_db.py  schema.py  schema.sql  sql_queries.py  users_db.py
src/entities/: citationArticle.py  citationBook.py  citationInproceedings.py  user.py
src/models/: reference.py  user.py  user_references.py
src/repositories/: article_repository.py  proceeging_repository.py  reference_repository.py  user_repository.py
src/routes/: reference_routes.py  user_routes.py
src/services/: doi_service.py  generateCitate.py  generatecitate.py  reference_service.py  user_service.py
src/static/: edit.css  form.css  login_register.css  style.css
src/templates/: add_doi.html  bibtex_export.html  edit.html  error.html  form.html  index.html  login.html  login_and_register.html  register.html
src/testit/: dummy_test.py
src/tests/: AppLibrary.py  citate.robot  citationArticle_test.py  citationBook_test.py  citationInproceedings_test.py  generateCitate_test.py  home.robot  login.robot  login_resource.robot  register.robot  resource.robot  sql_queries_test_KESKEN.py
templates/: index.html
(+4 files in other folders)
