[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
flask-sqlalchemy = "^3.1.1"
invoke = "^2.2.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


