[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
flask-sqlalchemy = "^3.1.1"
invoke = "^2.2.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
werkzeug = "^3.0.1"
flask-wtf = "^1.2.1"
pylint = "^3.0.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


